chore: update application configuration and refactor OpenAI API handling